--- a/CST438-project/CST439-project/package.json
+++ b/CST438-project/CST439-project/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-local-storage": "^0.7.1",
     "core-js": "^2.4.1",
     "firebase": "^4.12.0",
     "firebaseui": "^2.6.3",
