--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -41,7 +41,16 @@
             <scope>test</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.firebase</groupId>
+            <artifactId>geofire-java</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.1.12</version>
+        </dependency>
     </dependencies>
 
     <build>
