--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^5.2.0",
     "angular-local-storage": "^0.7.1",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "firebase": "^4.12.0",
     "firebaseui": "^2.6.3",
     "rxjs": "^5.5.6",
