--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "serve": "ng serve"
+    "serve": "ng serve",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
