--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,12 +27,16 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/socket.io-client": "^1.4.32",
     "angular-local-storage": "^0.7.1",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "firebase": "^4.12.0",
     "firebaseui": "^2.6.3",
+    "moment": "^2.22.1",
     "rxjs": "^5.5.6",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
