--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@mat-datetimepicker/core": "^1.0.4",
+    "angular-bootstrap-md": "^6.0.1",
     "angular-local-storage": "^0.7.1",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
