--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/socket.io-client": "^1.4.32",
     "@mat-datetimepicker/core": "^1.0.4",
     "angular-local-storage": "^0.7.1",
     "core-js": "^2.4.1",
@@ -37,8 +38,7 @@
     "rxjs": "^5.5.6",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
-    "zone.js": "^0.8.19",
-    "@types/socket.io-client": "^1.4.32"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.6.8",
