--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "firebase": "^4.12.0",
     "firebaseui": "^2.6.3",
     "moment": "^2.22.1",
+    "ngx-moment": "^2.0.0",
     "rxjs": "^5.5.6",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
